--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ wheels/
 pip-log.txt
 pip-delete-this-directory.txt
 Книга1.xlsx
+example.py
+example.dat
 
 # Unit test / coverage reports
 htmlcov/
